refresh all tags on every tag action; expanded context menu; bugfix z-index & zoomed tags;

--- a/htdocs/layout/css/common.less
+++ b/htdocs/layout/css/common.less
@@ -1,5 +1,6 @@
 .dropdown-menu {
 	cursor: default;
+	z-index: 9999999;
 }
 /* -------------------------------- 
 
